package fight;

public class Field{
    private Character character1;
    private Character character2;
    private Character character3;
    private Character character4;

    public Field(Character ch1, Character ch2, Character ch3, Character ch4){
        this.character1 = ch1;
        this.character2 = ch2;
        this.character3 = ch3;
        this.character4 = ch4;
    }
}