package fight;

public class Fight{
    private BattleField battleField;

    public Fight(BattleField battleField){
        this.battleField = battleField;
    }
}