package fight;

import fight.effects.Effect;

public class Skill {

    public Skill(){
    }

    public Skill(Skill skill){
    }

    public void use(BattleField battleField, Character firstTarget){
        System.out.println("Compétence lancée");
    }
}